decided to add additional phase chart still got to add it for dct and fix timeshift add amp scale and rotation and reverseTransform

--- a/style.css
+++ b/style.css
@@ -275,6 +275,15 @@ canvas {
   margin-bottom: 20px; /* Space between charts */
 
 }
+
+.transformChartGrid{
+  display:grid;
+  width:100%;
+  grid-template-columns:repeat(1,minmax(0,1fr));
+  grid-template-rows:1fr;
+}
+
+
 /* Floating Div */
 .showDiv {
   position: fixed;
